# ModTemplate

./: CMakeLists.txt
.github/workflows/: ci.yml
